<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/beginGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/companySettingsContainer"
        style="@style/Form"
        app:layout_constraintStart_toStartOf="@id/beginGuideline"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/userSettingsContainer">

        <TextView
            android:id="@+id/companyTitleTextView"
            style="@style/FormHintTextView"
            android:text="@string/company_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/companyNameHintTextView"
            style="@style/HintTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/user_first_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/companyTitleTextView" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/companyBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="companyNameHintTextView"/>

        <EditText
            android:id="@+id/companyNameEditText"
            style="@style/HintTextView.Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            app:layout_constraintStart_toStartOf="@id/companyBarrier"
            app:layout_constraintBaseline_toBaselineOf="@id/companyNameHintTextView" />

        <Button
            android:id="@+id/companySaveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/save_company_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/companyNameEditText"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/userSettingsContainer"
        style="@style/Form"
        app:layout_constraintStart_toStartOf="@id/beginGuideline"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintTop_toBottomOf="@id/companySettingsContainer"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/titleTextView"
            style="@style/FormHintTextView"
            android:text="@string/personal_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/firstNameHintTextView"
            style="@style/HintTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/user_first_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleTextView" />

        <TextView
            android:id="@+id/lastNameHintTextView"
            style="@style/HintTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/user_last_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/firstNameHintTextView" />

        <TextView
            android:id="@+id/emailHintTextView"
            style="@style/HintTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/user_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lastNameHintTextView" />

        <TextView
            android:id="@+id/mobileHintTextView"
            style="@style/HintTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/user_mobile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailHintTextView" />

        <TextView
            android:id="@+id/pushNotificationHintTextView"
            style="@style/HintTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/push_notif"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mobileHintTextView" />

        <TextView
            android:id="@+id/smsNotificationHintTextView"
            style="@style/HintTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sms_notif"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pushNotificationHintTextView" />

        <TextView
            android:id="@+id/emailNotificationHintTextView"
            style="@style/HintTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/email_notif"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/smsNotificationHintTextView" />


        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="pushNotificationHintTextView,smsNotificationHintTextView,emailNotificationHintTextView,mobileHintTextView,emailHintTextView,lastNameHintTextView,firstNameHintTextView"/>

        <EditText
            android:id="@+id/firstNameEditText"
            style="@style/HintTextView.Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintBaseline_toBaselineOf="@id/firstNameHintTextView" />

        <EditText
            android:id="@+id/lastNameEditText"
            style="@style/HintTextView.Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintBaseline_toBaselineOf="@id/lastNameHintTextView" />

        <EditText
            android:id="@+id/emailEditText"
            style="@style/HintTextView.Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintBaseline_toBaselineOf="@id/emailHintTextView" />

        <EditText
            android:id="@+id/mobileEditText"
            style="@style/HintTextView.Value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintBaseline_toBaselineOf="@id/mobileHintTextView" />

        <CheckBox
            android:id="@+id/pushNotificationCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintBaseline_toBaselineOf="@id/pushNotificationHintTextView"/>

        <CheckBox
            android:id="@+id/smsNotificationCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintBaseline_toBaselineOf="@id/smsNotificationHintTextView"/>

        <CheckBox
            android:id="@+id/emailNotificationCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintBaseline_toBaselineOf="@id/emailNotificationHintTextView"/>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/save_personal_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailNotificationCheckBox"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userSettingsContainer"
        app:layout_constraintBottom_toTopOf="@id/logoutButton"/>

    <Button
        android:id="@+id/changeFacilityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_facility"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/logoutButton"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        app:layout_constraintStart_toEndOf="@id/changeFacilityButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>